# clearo

./: Anchor.toml  LICENSE  README.md  ecosystem.config.js.example  env.example  install-postgresql.sh  package-lock.json  package.json  reset-database.sh  start-dev.sh  start-production.sh  stop-backend.sh  stop-dev.sh  test-email-quick.sh
backend/: package-lock.json  package.json  test-email.js
backend/src/: index.ts
backend/src/db/: index.ts
backend/src/middleware/: auth.ts
backend/src/routes/: auth.ts  documents.ts  projects.ts  scoring.ts  voting.ts  walletAuth.ts
backend/src/services/: email.ts  scoring.ts
backend/src/types/: index.ts
backend/src/utils/: solana.ts  walletAuth.ts
frontend/: env.example  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout-backup.tsx  layout-simple.tsx  layout.tsx  page.tsx  wallet-adapter-overrides.css
frontend/app/profile/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/reset-password/: page.tsx
frontend/app/verify/: page.tsx
frontend/app/verify-email/: page.tsx
frontend/app/wallets/: page.tsx
frontend/app/whitepaper/: page.tsx
frontend/components/: BadgeWidget.tsx  Footer.tsx  WalletButtonWrapper.tsx  WalletProvider.tsx
frontend/contexts/: AuthContext.tsx  WalletAuthContext.tsx
frontend/src/config/: api.ts
programs/registry/: Cargo.toml
programs/verification/: Cargo.toml
programs/verification/src/: lib.rs
programs/voting/: Cargo.toml
scripts/: generate-pdf.sh  generate-verification-code.ts  generate-whitepaper-pdf.js  indexer.ts
(+15 files in other folders)
